--- a/package.json
+++ b/package.json
@@ -29,6 +29,15 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
+    "mongodb": "^2.1.18",
+    "mongoose": "^4.4.20",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-redux": "^4.4.5",
+    "react-redux-form": "^0.13.7",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
