--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.20",
     "react": "^0.14.8",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.5",
     "react-redux-form": "^0.13.7",
